--- a/templates/gkw.html
+++ b/templates/gkw.html
@@ -7,7 +7,7 @@
 <p>亲，你OUT了！</p>
 <p>请输入客户showroom地址，一行一个</p>
 <form action='' method='post'>
-<textarea type='text' name='showroom' style='width:400px;height:500px;'></textarea>
+<textarea type='text' name='data' style='width:400px;height:500px;'></textarea>
 <input type='submit' value='提交处理' />
 </form>
 </body>
