--- a/templates/gkw.html
+++ b/templates/gkw.html
@@ -1,14 +1,36 @@
-﻿<html>
-<head>
-<title>关键词获取工具</title>
-</head>
-<body>
-<p>亲！你还在手工复制粘贴关键字吗？</p>
-<p>亲，你OUT了！</p>
-<p>请输入客户showroom地址，一行一个</p>
-<form action='' method='post'>
-<textarea type='text' name='data' style='width:400px;height:500px;'></textarea>
-<input type='submit' value='提交处理' />
-</form>
-</body>
+<html>
+  <head>
+		<title>Adwords关键词批量添加工具</title>
+	</head>
+	<body>
+		<div style='text-align:center;border-bottom:#369 1px dotted;margin-bottom:20px;'>
+			<h3>AdWords关键词批量添加工具</h3>
+		</div>
+		
+		<div id='left' style='float:left;width:280px;height:600px;font-size:13px;
+			border-style:dotted;border-color:#369;border-width:1px;
+			margin-right:20px;'>
+			<h4>功能介绍：</h4>
+			<p>此工具用于为AdWords客户账批量户添加其showroom上的关键词</p>
+			<p>1.自动抓取关键词——无需再手工复制</p>
+			<p>2.直接导入文件——无需再人工添加</p>
+			<p>3.关键词优化——消除特殊字符</p>
+			<h4>使用方法：</h4>
+			<p>1.在AdWords编辑器中切换到“文字广告”标签页；</p>
+			<p>2.为A客户添加关键词，就复制其文字广告数据到下面的输入框内；</p>
+			<p>3.将下载的数据文件另存为CSV格式即可导入AdWords编辑器完成关键词的添加。</p>
+		</div>
+		
+		<div id='right' style='float:left;width:1000px;height:600px;'>
+			<form action='' method='post'>
+				<div style='float:left;'>
+					<textarea type='text' name='data' style='width:1000px;height:580px;'>
+					</textarea>
+				</div>
+				<div style='float:left;'>
+					<input type='submit' value='提交处理' />
+				</div>
+			</form>
+		</div>
+	</body>
 </html>
