create csv file instead of excel file

--- a/templates/gkw.html
+++ b/templates/gkw.html
@@ -1,5 +1,5 @@
-<html>
-  	<head>
+﻿<html>
+	<head>
 		<title>Adwords关键词批量添加工具</title>
 	</head>
 	<body>
@@ -21,13 +21,12 @@
 			<p>3.将下载的数据文件另存为CSV格式即可导入AdWords编辑器完成关键词的添加。</p>
 		</div>
 		
-		<div id='right' style='float:left;width:1000px;height:600px;'>
+		<div id='right' style='float:left;width:900px;height:600px;'>
 			<form action='' method='post'>
 				<div style='float:left;'>
-					<textarea type='text' name='data' style='width:1000px;height:580px;'>
-					</textarea>
+					<textarea type='text' name='data' style='width:900px;height:580px;'></textarea>
 				</div>
-				<div style='float:left;'>
+				<div id='main' style='float:left;'>
 					<input type='submit' value='提交处理' />
 				</div>
 			</form>
