--- a/templates/over.html
+++ b/templates/over.html
@@ -1,5 +1,5 @@
 ﻿<html>
 <body>
-<p>已完成处理。<a href='{%url media file_name%}'>点此下载</a></p>
+<p>已完成处理。<a href='{%url download%}'>点此下载</a></p>
 </body>
 </html>
