修改使用说明文字

--- a/templates/gkw.html
+++ b/templates/gkw.html
@@ -23,7 +23,7 @@
 				<h4>使用方法：</h4>
 				<p>1.在AdWords编辑器中切换到“文字广告”标签页；</p>
 				<p>2.为A客户添加关键词，就复制其文字广告数据到下面的输入框内；</p>
-				<p>3.将下载的数据文件另存为CSV格式即可导入AdWords编辑器完成关键词的添加。</p>
+				<p>3.将下载的CSV文件导入AdWords编辑器即可完成关键词的添加。</p>
 			</div>
 			
 			<div id='right'>
