add statistical data

--- a/templates/over.html
+++ b/templates/over.html
@@ -1,5 +1,7 @@
 ﻿<html>
 <body>
 <p>已完成处理。<a href='{%url download%}'>点此下载</a></p>
+<h4>统计信息：</h4>
+<p>本次共计为{{adgroup_count}}个广告组抓取关键词{{keyword_count}}个。</p>
 </body>
 </html>
